--- a/plugin.xml
+++ b/plugin.xml
@@ -55,7 +55,8 @@
         <source-file src="src/android/AdjustCordovaUtils.java" target-dir="src/com/adjust/sdk" />
         <source-file src="src/android/adjust-android.jar" target-dir="libs" />
 
-        <framework src="com.google.android.gms:play-services-analytics:11.8.0" />
+        <framework src="com.google.android.gms:play-services-analytics:$GMS_VERSION" />
+        <preference name="GMS_VERSION" default="11.0.8" />
         <framework src="com.android.installreferrer:installreferrer:1.0" />
     </platform>
 
